SERVER-28357 Do not enforce quota on starting MMAPv1 compact

(cherry picked from commit 914bbbd26a686e032fdddec964b109ea78c6e6f6)

Conflicts:
	src/mongo/db/storage/mmap_v1/record_store_v1_simple.cpp